[package]
name = "wasm_worker_interaction"
version = "0.1.0"
authors = ["Simon B. Gasse"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
console_error_panic_hook = { version = "0.1.6", optional = true }

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
]